implemented OAuth2 on swagger
