# docs/swagger.json
@@ -109,6 +109,9 @@
                 "produces": [
                     "text/plain"
                 ],
+                "tags": [
+                    "OAuth2"
+                ],
                 "summary": "Handles authentication callback",
                 "responses": {
                     "200": {
@@ -125,6 +128,9 @@
                 "description": "Redirects to Keycloak login page",
                 "produces": [
                     "text/html"
+                ],
+                "tags": [
+                    "OAuth2"
                 ],
                 "summary": "Initiates login process",
                 "responses": {
@@ -143,6 +149,9 @@
                 "produces": [
                     "text/html"
                 ],
+                "tags": [
+                    "OAuth2"
+                ],
                 "summary": "Logs out the user",
                 "responses": {
                     "302": {
@@ -158,7 +167,7 @@
             "get": {
                 "security": [
                     {
-                        "BearerAuth": []
+                        "OAuth2Implicit": []
                     }
                 ],
                 "description": "Get all cats",
@@ -169,7 +178,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "Cats"
                 ],
                 "summary": "Get all cats",
                 "responses": {
@@ -184,7 +193,7 @@
             "post": {
                 "security": [
                     {
-                        "BearerAuth": []
+                        "OAuth2Implicit": []
                     }
                 ],
                 "description": "Insert a Cat",
@@ -195,7 +204,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "Cats"
                 ],
                 "summary": "Create Cat",
                 "parameters": [
@@ -323,6 +332,14 @@
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
+        },
+        "OAuth2Implicit": {
+            "type": "oauth2",
+            "flow": "implicit",
+            "authorizationUrl": "http://mykeycloak:8080/realms/app/protocol/openid-connect/auth",
+            "scopes": {
+                "openid": "Grants read access"
+            }
         }
     },
     "externalDocs": {
